--- a/unit-2/137-CA-02.tex
+++ b/unit-2/137-CA-02.tex
@@ -644,6 +644,16 @@ f(x)=0}?
 
 \end{frame}
 
+
+\begin{frame}
+\frametitle{MAT137 Lecture 11 --- Limit Laws}
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 2.12, 2.13 }
+		\end{itemize}
+	\vfill
+
+\end{frame}
 %------------------------------
 
 \begin{frame}
@@ -672,16 +682,6 @@ $$
 
 \end{frame}
 
-
-\begin{frame}
-\frametitle{MAT137 Lecture 11 --- Limit Laws}
-	{\bf Before next class:}
-		\begin{itemize} \normalsize
-			\item {\bf Watch videos 2.12, 2.13 }
-		\end{itemize}
-	\vfill
-
-\end{frame}
 
 %-----------------------
 \begin{frame}[t]
@@ -976,168 +976,112 @@ THEN  \DS{\lim_{x \to a} \left[ f(x) g(x) \right] = 0}
 
 \end{frame}
 
-
-\begin{frame}
-\frametitle{MAT137 Lecture 14 --- Continuity 2}
-	{\bf Before next class:}
-		\begin{itemize} \normalsize
-			\item {\bf Watch videos 2.19, 2.20 }
-		\end{itemize}
-	\vfill
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{MAT137 Lecture 15 --- Computations}
-	{\bf Before next class:}
-		\begin{itemize} \normalsize
-			\item {\bf Watch videos 2.21, 2.22 }
-		\end{itemize}
-	\vfill
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{MAT137 Lecture 16 --- IVT and EVT}
-	{\bf Before next class:}
-		\begin{itemize} \normalsize
-			\item {\bf Watch videos 3.1, 3.2, 3.3 }
-		\end{itemize}
-	\vfill
-
-\end{frame}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\begin{frame}
-\frametitle{Limit at a point}
-
-If a function $f$ is not defined at $x=a$, then
-\begin{enumerate}
-\item $\displaystyle{\lim_{x\rightarrow a} f(x)}$ cannot exist
-\item $\displaystyle{\lim_{x\rightarrow a} f(x)}$ could be $0$
-\item $\displaystyle{\lim_{x\rightarrow a} f(x)}$ must approach $\infty$
-\item none of the above.
-\end{enumerate} 
-
-\end{frame}
-
-
-
-
 %-----------------------------
-\begin{frame}
-\frametitle{Exponential limits}
-
-Compute:
-	$$
-		\lim_{t \to 0^+} e^{1/t}, \quad \quad \lim_{t \to 0^-} e^{1/t}.
-	$$
-
-\
-
-Suggestion:  Sketch the graph of \DS{y=e^x} first.	
-
-\end{frame}
-%------------------------------
 \begin{frame}[t]
-\frametitle{Rational limits}
+	\frametitle{Undefined function}
+	\smallerfont
+	Let $a \in \R$ and let $f$ be a function.   Assume $f(a)$ is undefined.
 
-Consider the function
-	$$
-		h(x) = \frac{(x-1)(2+x)}{x^2(x-1)(2-x)}.
-	$$
-\begin{itemize}
-	\item Find all real values $a$ for which $h(a)$ is undefined. \\
-	\item For each such value of $a$, compute \DS{\lim_{x \to a^+} h(x)} and \DS{\lim_{x \to a^-}h(x)}. \\
-	\item Based on your answer, and nothing else, try to sketch the graph of $h$.	
-\end{itemize}
+	\vfill
 
+	\begin{block}{What can we conclude?}
+		\begin{enumerate}
+			\item  \DS{\lim_{x \to a} f(x)} exist
+			\item  \DS{\lim_{x \to a} f(x)} doesn't exist.
+			\item   No conclusion.  \DS{\lim_{x \to a} f(x)} may or may not exist.
+		\end{enumerate}
+	\end{block}
+
+	\vfill
+
+	\begin{block}{What else can we conclude?}
+		\begin{enumerate} \addtocounter{enumi}{3}
+			\item  $f$ is continuous at $a$.
+			\item  $f$ is not continuous at $a$.
+			\item  No conclusion. $f$ may or may not be continuous at $a$.
+		\end{enumerate}
+	\end{block}
+
+	\vfill
+	
 \end{frame}
+
+
 \begin{frame}[t]
-\frametitle{Related implications}
+	\frametitle{Definition of continuity}
+	Let $f:\mathbb R\to\mathbb R$ be a function and let $a\in\mathbb R$.
 
+	\bigskip
+	\smallerfont
+	Which statements are equivalent to ``$f$ is continuous at $a$''?
 
-Let $a \in \R$.  Let $f$ be a function.
-Assume we know 
-	$$
-		0 < |x-a| < 0.1 \quad \implies \quad f(x) > 100
-	$$
-\vspace{-.5cm}
-\begin{enumerate}
-	\item  Which values of $M \in \R$ satisfy ... ?
-		$$
-			0 < |x-a| < 0.1 \quad \implies \quad f(x) > M \p
-		$$
-\vspace{-.5cm}
-	\item  Which values of $\delta>0$ satisfy ... ?
-		$$
-				0 < |x-a| < \delta \quad \implies \quad f(x) > 100
-		$$
-\end{enumerate}	
-
-
-\end{frame}
-%-----------------------------
-\begin{frame}
-\frametitle{Strict or non-strict inequality?}
-
-	Let $f$ be a function with domain $\R$.  One of these statements implies the other.  Which one?
-
-\
+	\bigskip
 	\begin{enumerate}
-		\item  \DS{\forall M \in \R, \, \exists N \in \R \mbox{ s.t. }  x>N \implies f(x) > M}
+		\item \DS{\lim_{x\to a} f(x)} exists.
+			\vfill
+		\item \DS{\lim_{x\to a} f(x)} exists and $f(a)$ is defined.
+			\vfill
+		\item \DS{\lim_{x\to a} f(x)=f(a)}.
 
-\
-		\item  \DS{\forall M \in \R, \, \exists N \in \R \mbox{ s.t. }  x>N \implies f(x) \geq M}
+		
+			\vfill
+		\item \mbox{
+			\footnotesize
+			$\forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \forall x\in\mathbb R,\ \rojo{0<}|x-a|<\delta\implies |f(x)-L|<\varepsilon$
+		}
+			\vfill
+		\item \mbox{
+			\footnotesize
+			$\forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \forall x\in\mathbb R,\ \rojo{0<}|x-a|<\delta\implies |f(x)-\rojo{f(a)}|<\varepsilon$
+		}
+			\vfill
+		\item \mbox{
+			\footnotesize
+			$\forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \forall x\in\mathbb R,\ \phantom{0<}|x-a|<\delta\implies |f(x)-\rojo{f(a)}|<\varepsilon$
+		}
 	\end{enumerate}
-
-
-\end{frame}
-
-%-----------------------------
-
-\begin{frame}
-\frametitle{Negation of conditionals}
-
-Write the negation of these statements:
-	\begin{enumerate}
-		\item  If Justin Trudeau has a brother, then he also has a sister.
-		\item  If a student in this class has a brother, then they also have a sister.
-	\end{enumerate}	
+			\vfill
+	
 \end{frame}
 
 %-----------------------------
 \begin{frame}
-\frametitle{More negation}
+\frametitle{A new function}
 
-Let $f$ be a function with domain $\mathbb{R}$.  Write the negation of the statement:
-	\begin{equation*}
-		\mbox{IF } \; 2<x<4, \quad \mbox{ THEN } \; 1<f(x)<3.  	
-	\end{equation*}
+\begin{itemize}
+\item Let $x, y \in \R$.  What does the following expression calculate?  Prove it.
+	$$
+		f(x,y) = \frac{x + y + |x - y|}{2}
+	$$
+\emph{Suggestion:}  If you don't know how to start, try some sample values of $x$ and $y$.
+\vfill  \p
 
+\item Write a similar expression to compute \DS{\min \{ x, y \}}.
+\end{itemize}
+\vfill
+
+\end{frame}
+
+%-----------------------------
+\begin{frame}
+\frametitle{More continuous functions}
+
+We want to prove the following theorem
+\begin{block}{Theorem}
+IF $f$ and $g$ are continuous functions \\
+THEN $h(x) = \max \{ f(x), g(x) \}$ is also a continuous function.
+\end{block}
+
+You are allowed to use all results that we already know.  What is the fastest way to prove this?
+
+
+\vfill
+
+
+\emph{Hint:}  
+There is a way to prove this quickly without writing any epsilons.
+
+\vfill
 
 \end{frame}
 
@@ -1164,283 +1108,17 @@ Write down the formal definition of the following statements:
 
 \end{frame}
 
-%-----------------------
-\begin{frame}[t]
-\frametitle{Preparation: choosing deltas}
-
-\begin{enumerate}
-	\item  Find one value of $\delta >0$ such that  
-		$$ |x-3|< \delta \implies |5x-15|<1.$$
-	\item  Find \emph{all} values of $\delta >0$ such that  
-		$$ |x-3|< \delta \implies |5x-15|<1. $$
-	\item  Find \emph{all} values of $\delta >0$ such that  
-		$$|x-3|< \delta \implies |5x-15|<0.1. $$
-	\item  Let us fix $\e >0$.  Find \emph{all} values of $\delta >0$ such that  
-		$$|x-3|< \delta \implies |5x-15|<\e.$$
-\end{enumerate}
-
-\end{frame}
-
-
-
-%-----------------------
-\begin{frame}[t]
-\frametitle{Your first $\e-\delta$ proof}
-
-\begin{block}{Goal}
-	We want to prove that
-		\begin{equation} \label{eq:uno}
-			\lim_{x \to 3} \left( 5x + 1 \right) = 16
-		\end{equation}
-	directly from the definition.
-\end{block}
-\vfill 
-\begin{enumerate}
-\p		\item  Write down the formal definition of the statement \eqref{eq:uno}.
-\p		\item  Write down what the structure of the formal proof should be, without filling the details.
-\p		\item  Write down a complete formal proof.
-\end{enumerate}
-\vfill
-\end{frame}
-
-%-----------------------------
-\begin{frame}
-\frametitle{A harder proof}
-
-\begin{block}{Goal}
-	We want to prove that
-		\begin{equation} \label{eq:dos}
-			\lim_{x \to 0} \left( x^3 + x^2 \right) = 0
-		\end{equation}
-	directly from the definition.
-\end{block}
-\vfill 
-\begin{enumerate}
-\pause	\item  Write down the formal definition of the statement \eqref{eq:dos}.
-\pause	\item  Write down what the structure of the formal proof should be, without filling the details.
-\pause	\item  Rough work:  What is $\delta?$
-\pause	\item  Write down a complete formal proof.
-\end{enumerate}
-\vfill
-
-\end{frame}
-%-----------------------------
-\begin{frame}[t]
-\frametitle{Is this proof correct?}
-
-{\bf Claim:}
-	$$
-		\forall \e >0, \exists \delta>0 \mbox{ s.t. }  \quad 0<|x|<\delta \; \implies \;  |x^3+x^2| < \e.
-	$$
-\vfill
-\begin{block}{Proof:}
-	\begin{itemize}
-		\item  Let $\e >0$.
-		\item  Take \DS{\delta = \sqrt{\frac{\e}{|x+1|}}}.
-		\item Let $x \in \R$.  Assume $0 < |x| < \delta$.  Then
-			$$
-				|x^3+x^2| = x^2 | x + 1| < \delta^2 |x+1| = \frac{\e}{|x+1|} |x+1| = \e.
-			$$
-		\item	 I have proven that \DS{|x^3+x^2| < \e}. 
-		\hfill \qed
-	\end{itemize}
-\end{block}
-
-\vfill
-
-\end{frame}
-
-%-----------------------
-\begin{frame}[t]
-\frametitle{Choosing deltas again} 
-
-Let us fix numbers $A, \e >0$.  Find:
-
-\vfill
-
-\begin{enumerate}
-	\item  a value of $\delta >0$ \; s.t.  \hfill \DS{|x|< \delta \implies |Ax^2|<\e}
-\p \vfill
-	\item  \emph{all} values of $\delta >0$ \; s.t.  \hfill \DS{|x|< \delta \implies |Ax^2|<\e}
-\p \vfill
-	\item a value of $\delta >0$ \; s.t.   \hfill \DS{|x|< \delta \implies |x+1| < 10}
-\p \vfill
-	\item \emph{all} values of $\delta >0$ \; s.t.   \hfill \DS{|x|< \delta \implies |x+1| < 10}
-\p \vfill
-	\item a value of $\delta >0$  \; s.t.   \hfill \DS{|x|< \delta \implies \left\{  \begin{array}{c} |Ax^2|<\e \\ |x+1| < 10 \end{array} \right. }
-\p \vfill
-	\item a value of $\delta >0$ \; s.t. \hfill \DS{|x| < \delta \implies |(x+1)x^2| < \e }
-\vfill
-\end{enumerate}
-
-\end{frame}
-
-
-%-----------------------
-\begin{frame}
-\frametitle{A theorem about limits}
-\smallerfont
-\begin{block}{}
- Let $f$ be a function with domain $\R$ such that 
-$$
-\lim_{x\to 0} f(x) = 3
-$$
-Prove that 
-$$
-\lim_{x\to 0} \left[  5 f(2x) \right] =15
-$$
-directly from the definition of limit.  Do not use any of the limit laws.
-\end{block}
-\begin{enumerate}
-\pause	\item  Write down the formal definition of the statement you want to prove.
-\pause	\item  Write down what the structure of the formal proof should be, without filling the details.
-\pause	\item  Rough work.
-\pause 	\item  Write down a complete proof.
-\end{enumerate}
-
-\end{frame}
-%-----------------------------
-\begin{frame}[t]
-\frametitle{Proof feedback}
-
-\begin{enumerate}
-	\item  Is the structure of the proof correct?  \\
-	(First fix $\e$, then choose $\delta$, then ...)
-	\item  Did you say exactly what $\delta$ is?
-	\item  Is the proof self-contained?  \\
-	 (I do not need to read the rough work)
-	\item  Are all variables defined?  In the right order? 
-	\item  Do all steps follow logically from what comes before? \\
-	Do you start from what you know and prove what you have to prove? \\
-	\item  Are you proving your conclusion or assuming it?
-\end{enumerate}
-
-
-\end{frame}
-%-----------------------
-\begin{frame}[t]
-\frametitle{A new squeeze}
-\smallerfont
-\begin{block}{The (new) Squeeze Theorem}
-	Let $a \in \R$. \\
-	Let $g$ and $h$ be functions defined near $a$, except possibly at $a$.
-
-\vspace{.2cm}
-	\begin{tabular}{cl}
-		IF  & $\bullet$ {For $x$ close to $a$ but not $a$,} \;
-			 \DS{%\exists p >0, \mbox{ s.t. } 0 < |x-a| < p \; \implies \; 
-			 h(x) \leq g(x) 
-			 } 
-			 \\ \vspace{-.2cm} \\
-		&    $\bullet$ \DS{ \lim_{x \to a} h(x) = \infty } \\ 
-		\vspace{-.1cm} \\
-		THEN & $\bullet$ \DS{\lim_{x \to a} g(x) = \infty}
-	\end{tabular}
-\end{block}
-
-\begin{enumerate}
-\p
-	\item  Replace the first hypothesis with a more precise mathematical statement.
-\p
-	\item  Write down the definition of what you want to prove.
-\p
-	\item  Write down the structure of the formal proof.
-\p
-	\item  Rough work
-\p
-	\item  Write down a complete, formal proof.
-\end{enumerate}
-\end{frame}
-
-
-
-
-
-%-----------------------------
 
 \begin{frame}
-\frametitle{Absolute value and the Squeeze Theorem}
-
-Use the Squeeze Theorem to prove:
-\begin{theorem}
-IF \DS{\lim_{x\to a}|f(x)| = 0}, THEN \DS{\lim_{x\to a}f(x)=0}.\\
-\end{theorem}
-
-\
-
-\emph{Hint:} Recall that $-|c| \leq c \leq |c|$ for every $c \in \R$.
+\frametitle{MAT137 Lecture 14 --- Continuity 2}
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 2.19, 2.20 }
+		\end{itemize}
+	\vfill
 
 \end{frame}
 
-%-----------------------------
-\begin{frame}[t]
-\frametitle{Undefined function}
-\smallerfont
-Let $a \in \R$ and let $f$ be a function.   Assume $f(a)$ is undefined.
-
-\vfill
-
-\begin{block}{What can we conclude?}
-	\begin{enumerate}
-		\item  \DS{\lim_{x \to a} f(x)} exist
-		\item  \DS{\lim_{x \to a} f(x)} doesn't exist.
-		\item   No conclusion.  \DS{\lim_{x \to a} f(x)} may or may not exist.
-	\end{enumerate}
-\end{block}
-
-\vfill
-
-\begin{block}{What else can we conclude?}
-	\begin{enumerate} \addtocounter{enumi}{3}
-		\item  $f$ is continuous at $a$.
-		\item  $f$ is not continuous at $a$.
-		\item  No conclusion. $f$ may or may not be continuous at $a$.
-	\end{enumerate}
-\end{block}
-
-\vfill
-	
-\end{frame}
-
-%-----------------------------
-\begin{frame}
-\frametitle{A new function}
-
-\begin{itemize}
-\item Let $x, y \in \R$.  What does the following expression calculate?  Prove it.
-	$$
-		f(x,y) = \frac{x + y + |x - y|}{2}
-	$$
-\emph{Suggestion:}  If you don't know how to start, try some sample values of $x$ and $y$.
-\vfill  \p
-
-\item Write a similar expression to compute \DS{\min \{ x, y \}}.
-\end{itemize}
-\vfill
-
-\end{frame}
-%-----------------------------
-\begin{frame}
-\frametitle{More continuous functions}
-
-We want to prove the following theorem
-\begin{block}{Theorem}
-IF $f$ and $g$ are continuous functions \\
-THEN $h(x) = \max \{ f(x), g(x) \}$ is also a continuous function.
-\end{block}
-
-You are allowed to use all results that we already know.  What is the fastest way to prove this?
-
-
-\vfill
-
-
-\emph{Hint:}  
-There is a way to prove this quickly without writing any epsilons.
-
-\vfill
-
-\end{frame}
 
 %------------------------------
 \begin{frame}
@@ -1459,6 +1137,7 @@ There is a way to prove this quickly without writing any epsilons.
 
 
 \end{frame}
+
 %------------------------------
 \begin{frame}
 \frametitle{Which one is the correct claim?}
@@ -1501,8 +1180,54 @@ Construct a pair of functions $f$ and $g$ such that
 	\end{align*}
 
 \end{frame}
-%------------------------------
+
+\begin{frame}[t]
+	\frametitle{Continuity and Quantifiers}
+	Let $f:\mathbb R\to\mathbb R$ be a function.
+
+	\small
+	\medskip
+	Which statements are equivalent to ``$f$ is continuous''?
+
+	\begin{enumerate}
+		\item \DS{\lim_{x\to a} f(x)=f(a)}.
+
+		
+			\vfill
+		\item 
+			$\phantom{\forall a\in \mathbb R,\ }\forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \rojo{\forall x\in\mathbb R},$\\
+			$|x-a|<\delta\implies |f(x)-f(a)|<\varepsilon$
+			\vfill
+		\item 
+			$\rojo{\forall a\in \mathbb R},\ \forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \rojo{\forall x\in\mathbb R},$\\
+			$|x-a|<\delta\implies |f(x)-f(a)|<\varepsilon$
+			\vfill
+		\item 
+			$\rojo{\forall x\in \mathbb R},\ \forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \rojo{\forall a\in\mathbb R},$\\
+			$|x-a|<\delta\implies |f(x)-f(a)|<\varepsilon$
+			\vfill
+		\item 
+			$\forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \rojo{\forall a\in \mathbb R},\ \rojo{\forall x\in\mathbb R},$\\
+			$|x-a|<\delta\implies |f(x)-f(a)|<\varepsilon$
+			\vfill
+	\end{enumerate}
+			\vfill
+	
+\end{frame}
+
+
 \begin{frame}
+\frametitle{MAT137 Lecture 15 --- Computations}
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 2.21, 2.22 }
+		\end{itemize}
+	\vfill
+
+\end{frame}
+
+%------------------------------
+\begin{frame}[t]
 \frametitle{Transforming limits}
 
 The only thing we know about the function $g$ is that
@@ -1533,60 +1258,14 @@ Compute:
 	\item \DS{\lim_{x \to \infty} \frac{x^2+11}{x+1}}
 	\item \DS{\lim_{x \to \infty} \frac{x^2+2x+3}{3x^2+4x+5}}
 	
-	\
-	
-	\item \DS{\lim_{x \to \infty} \frac{x^3 + \sqrt{2x^6+1}}{2x^3+ \sqrt{x^5+1}}}
-\end{multicols}
-\end{enumerate}
-
-\end{frame}
-%------------------------------
-\begin{frame}
-\frametitle{Trig computations}
-
-Using that \DS{\lim_{x \to 0} \frac{\sin x}{x} = 1}, compute the following limits:
-
-\
-
-\begin{enumerate}
-\begin{multicols}{2}
-	\item \DS{\lim_{x \to 2} \frac{\sin x}{x} }
 	\item \DS{\lim_{x \to 0} \frac{\sin (5x)}{x} }
 	\item \DS{\lim_{x \to 0} \frac{\tan^2 (2x^2)}{ x^4} }
 	\item \DS{\lim_{x \to 0} \frac{\sin e^x}{e^x} }
 	\item \DS{\lim_{x \to 0} \frac{1 - \cos x}{x} }
-	\item \DS{\lim_{x \to 0}  \frac{\tan^{10}(2x^{20})}{\sin^{200}(3x)} }
-\end{multicols}
-\p
-	\item  \ \vspace{-.6cm}
 	
-	{\smallerfont \DS{\lim_{x \to 0} \left[  (\sin x) \; (\cos (2x)) \; (\tan (3x)) \; (\sec (4x) ) \; (\csc (5x)) \; (\cot (6x)) \right]} }
-\end{enumerate}
-
-\end{frame}
-%------------------------------
-\begin{frame}
-\frametitle{Plus or minus infinity?}
-
-Compute:
-\begin{enumerate}
-\begin{multicols}{2}
-	\item  \DS{\lim_{x \to -3^+} \;  \frac{x^2-9}{3-2x-x^2}}
-
-	\item  \DS{\lim_{x \to 1^+} \; \frac{x^2-9}{3-2x-x^2}}
+	\item \DS{\lim_{x \to \infty} \frac{x^3 + \sqrt{2x^6+1}}{2x^3+ \sqrt{x^5+1}}}
 \end{multicols}
 \end{enumerate}
-
-\end{frame}
-%-----------------------------
-\begin{frame}
-\frametitle{A harder limit}
-
-Calculate
-
-	$$
-		\lim_{x \to 2} \frac{\left[\sqrt{2+x} -2\right] \left[ \sqrt{3+x} - 3 \right]}{\sqrt{x-1} - 1}
-	$$
 
 \end{frame}
 %-----------------------------
@@ -1614,22 +1293,17 @@ Compute \DS{L = \lim_{x \to -\infty} \left[  x - \sqrt{x^2+x} \right]}.
 \end{itemize}
 
 \end{frame}
-%-----------------------------
-\begin{frame}
-\frametitle{Can we conclude this?}
 
-\begin{itemize}
-	\item Consider the function \DS{(x)=\frac{4}{x}}.
-\vfill
-	\item We have \quad $f(-1)=-4<0$  \quad and \quad $f(1)=4>0$. 
-\vfill
-	\item Use IVT.
-	
-	 Can we conclude $f(c)=0$ for some $c\in(-1,1)$?
-\end{itemize}
-\vfill \vfill
+\begin{frame}
+\frametitle{MAT137 Lecture 16 --- IVT and EVT}
+	{\bf Before next class:}
+		\begin{itemize} \normalsize
+			\item {\bf Watch videos 3.1, 3.2, 3.3 }
+		\end{itemize}
+	\vfill
 
 \end{frame}
+
 
 %-----------------------------
 \begin{frame}
@@ -1649,62 +1323,22 @@ has at least two solutions.
 \begin{enumerate}
 \item  Prove that there exists a time of the day when the hour hand and the minute hand of a clock form an angle of exactly 23 degrees.
 
-\p \vfill
+\vfill
 \item  During a Raptors basketball game, at half time the Raptors have 52 points.  Prove that at some point they had exactly 26 points.
 
-\p \vfill
-\item  Prove that at some point during Alfonso's life, his height in centimetres was exactly equal to 10 times his weight in kilograms.  Some data:
+ \vfill
+\item  Prove that at some point during Jason's life, his height in centimetres was exactly equal to 10 times his weight in kilograms.  Some data:
 	\begin{itemize}
 		\item  His height at birth: 47 cm
 		\item  His weight at birth: 3.2 kg
-		\item  His height today: 172 cm
+		\item  His height today: 170 cm
 	\end{itemize}
 \vfill
 \end{enumerate}
 
 \end{frame}
 
-%-----------------------------
-\begin{frame}
-\frametitle{Temperature}
-	
-	On June 09, 2016, the outside temperature in Toronto at 6 AM was $10^\circ$. At 4 PM,
-the temperature was $20^\circ$. 
 
-\begin{enumerate}
-
-
-\item Must there have been a time between 6 AM and 4 PM when the temperature was $15^\circ$?
-Explain how you know. Which assumption about temperature allows you to reach your conclusion?
-
-
-\item Must there have been a time between 6 AM and 4 PM when the temperature was $22^\circ$?
-Explain how you know.
-
-
-\item Could there have been a time between 6 AM and 4 PM when the temperature was $22^\circ$?
-Explain how you know.
-
-\end{enumerate}
-\end{frame}
-
-%-----------------------------
-\begin{frame}
-\frametitle{Extrema}
-
-In each of the following cases, does the function $f$ have a maximum and a minimum on the interval $I$?
-
-\
-
-\begin{enumerate}
-	\item  \DS{f(x) = x^2}, \quad \DS{I = (-1,1)}.
-	\item   \DS{f(x) = \frac{(e^x + 2) \sin x}{x} - \cos x + 3 }, \quad  \DS{I = [2,6]}
-	\item   \DS{f(x) = \frac{(e^x + 2) \sin x}{x} - \cos x + 3 }, \quad  \DS{I = (0,5]}
-\end{enumerate}
-
-
-
-\end{frame}
 %-----------------------------
 \begin{frame}
 \frametitle{Definition of maximum}
@@ -1721,36 +1355,483 @@ Which one (or ones) of the following is (or are) a definition of 	\quad
 \end{enumerate}
 
 \end{frame}
+
 %-----------------------------
 \begin{frame}
-\frametitle{More on the definition of maximum}
+\frametitle{Extrema}
 
+In each of the following cases, does the function $f$ have a maximum and a minimum on the interval $A$?
 
-Let $f$ be a function with domain $I$.  \\
-What does each of the following mean?
+\
 
 \begin{enumerate}
-	\item  \DS{\exists C \in \R} s.t. \DS{\forall x \in I}, \DS{f(x) \leq C}
-	\item  \DS{\exists C \in \R} s.t. \DS{\forall x \in I}, \DS{f(x) < C}
-	\item  \DS{\exists a \in I} s.t. \DS{\forall x \in I}, \DS{f(x) \leq f(a)}
-	\item  \DS{\exists a \in I} s.t. \DS{\forall x \in I}, \DS{f(x) < f(a)}
+	\item  \DS{f(x) = x^2}, \quad \DS{A = (-1,1)}.
+	\item   \DS{f(x) = \frac{(e^x + 2) \sin x}{x} - \cos x + 3 }, \quad  \DS{A = [2,6]}
+	\item   \DS{f(x) = \frac{(e^x + 2) \sin x}{x} - \cos x + 3 }, \quad  \DS{A = (0,5]}
 \end{enumerate}
+
+
 
 \end{frame}
 
 
-%-----------------------------
-%-----------------------------
+
+
+
+
+
+
+
+
+
+
+
+
+%
+%
+%
+%
+%\begin{frame}
+%\frametitle{Limit at a point}
+%
+%If a function $f$ is not defined at $x=a$, then
+%\begin{enumerate}
+%\item $\displaystyle{\lim_{x\rightarrow a} f(x)}$ cannot exist
+%\item $\displaystyle{\lim_{x\rightarrow a} f(x)}$ could be $0$
+%\item $\displaystyle{\lim_{x\rightarrow a} f(x)}$ must approach $\infty$
+%\item none of the above.
+%\end{enumerate} 
+%
+%\end{frame}
+%
+%
+%
+%
+%%-----------------------------
+%\begin{frame}
+%\frametitle{Exponential limits}
+%
+%Compute:
+%	$$
+%		\lim_{t \to 0^+} e^{1/t}, \quad \quad \lim_{t \to 0^-} e^{1/t}.
+%	$$
+%
+%\
+%
+%Suggestion:  Sketch the graph of \DS{y=e^x} first.	
+%
+%\end{frame}
+%%------------------------------
+%\begin{frame}[t]
+%\frametitle{Rational limits}
+%
+%Consider the function
+%	$$
+%		h(x) = \frac{(x-1)(2+x)}{x^2(x-1)(2-x)}.
+%	$$
+%\begin{itemize}
+%	\item Find all real values $a$ for which $h(a)$ is undefined. \\
+%	\item For each such value of $a$, compute \DS{\lim_{x \to a^+} h(x)} and \DS{\lim_{x \to a^-}h(x)}. \\
+%	\item Based on your answer, and nothing else, try to sketch the graph of $h$.	
+%\end{itemize}
+%
+%\end{frame}
+%\begin{frame}[t]
+%\frametitle{Related implications}
+%
+%
+%Let $a \in \R$.  Let $f$ be a function.
+%Assume we know 
+%	$$
+%		0 < |x-a| < 0.1 \quad \implies \quad f(x) > 100
+%	$$
+%\vspace{-.5cm}
+%\begin{enumerate}
+%	\item  Which values of $M \in \R$ satisfy ... ?
+%		$$
+%			0 < |x-a| < 0.1 \quad \implies \quad f(x) > M \p
+%		$$
+%\vspace{-.5cm}
+%	\item  Which values of $\delta>0$ satisfy ... ?
+%		$$
+%				0 < |x-a| < \delta \quad \implies \quad f(x) > 100
+%		$$
+%\end{enumerate}	
+%
+%
+%\end{frame}
+%%-----------------------------
+%\begin{frame}
+%\frametitle{Strict or non-strict inequality?}
+%
+%	Let $f$ be a function with domain $\R$.  One of these statements implies the other.  Which one?
+%
+%\
+%	\begin{enumerate}
+%		\item  \DS{\forall M \in \R, \, \exists N \in \R \mbox{ s.t. }  x>N \implies f(x) > M}
+%
+%\
+%		\item  \DS{\forall M \in \R, \, \exists N \in \R \mbox{ s.t. }  x>N \implies f(x) \geq M}
+%	\end{enumerate}
+%
+%
+%\end{frame}
+%
+%%-----------------------------
+%
+%\begin{frame}
+%\frametitle{Negation of conditionals}
+%
+%Write the negation of these statements:
+%	\begin{enumerate}
+%		\item  If Justin Trudeau has a brother, then he also has a sister.
+%		\item  If a student in this class has a brother, then they also have a sister.
+%	\end{enumerate}	
+%\end{frame}
+%
+%%-----------------------------
+%\begin{frame}
+%\frametitle{More negation}
+%
+%Let $f$ be a function with domain $\mathbb{R}$.  Write the negation of the statement:
+%	\begin{equation*}
+%		\mbox{IF } \; 2<x<4, \quad \mbox{ THEN } \; 1<f(x)<3.  	
+%	\end{equation*}
+%
+%
+%\end{frame}
+%
+%%-----------------------
+%\begin{frame}[t]
+%\frametitle{Preparation: choosing deltas}
+%
+%\begin{enumerate}
+%	\item  Find one value of $\delta >0$ such that  
+%		$$ |x-3|< \delta \implies |5x-15|<1.$$
+%	\item  Find \emph{all} values of $\delta >0$ such that  
+%		$$ |x-3|< \delta \implies |5x-15|<1. $$
+%	\item  Find \emph{all} values of $\delta >0$ such that  
+%		$$|x-3|< \delta \implies |5x-15|<0.1. $$
+%	\item  Let us fix $\e >0$.  Find \emph{all} values of $\delta >0$ such that  
+%		$$|x-3|< \delta \implies |5x-15|<\e.$$
+%\end{enumerate}
+%
+%\end{frame}
+%
+%
+%
+%%-----------------------
+%\begin{frame}[t]
+%\frametitle{Your first $\e-\delta$ proof}
+%
+%\begin{block}{Goal}
+%	We want to prove that
+%		\begin{equation} \label{eq:uno}
+%			\lim_{x \to 3} \left( 5x + 1 \right) = 16
+%		\end{equation}
+%	directly from the definition.
+%\end{block}
+%\vfill 
+%\begin{enumerate}
+%\p		\item  Write down the formal definition of the statement \eqref{eq:uno}.
+%\p		\item  Write down what the structure of the formal proof should be, without filling the details.
+%\p		\item  Write down a complete formal proof.
+%\end{enumerate}
+%\vfill
+%\end{frame}
+%
+%%-----------------------------
+%\begin{frame}
+%\frametitle{A harder proof}
+%
+%\begin{block}{Goal}
+%	We want to prove that
+%		\begin{equation} \label{eq:dos}
+%			\lim_{x \to 0} \left( x^3 + x^2 \right) = 0
+%		\end{equation}
+%	directly from the definition.
+%\end{block}
+%\vfill 
+%\begin{enumerate}
+%\pause	\item  Write down the formal definition of the statement \eqref{eq:dos}.
+%\pause	\item  Write down what the structure of the formal proof should be, without filling the details.
+%\pause	\item  Rough work:  What is $\delta?$
+%\pause	\item  Write down a complete formal proof.
+%\end{enumerate}
+%\vfill
+%
+%\end{frame}
+%%-----------------------------
+%\begin{frame}[t]
+%\frametitle{Is this proof correct?}
+%
+%{\bf Claim:}
+%	$$
+%		\forall \e >0, \exists \delta>0 \mbox{ s.t. }  \quad 0<|x|<\delta \; \implies \;  |x^3+x^2| < \e.
+%	$$
+%\vfill
+%\begin{block}{Proof:}
+%	\begin{itemize}
+%		\item  Let $\e >0$.
+%		\item  Take \DS{\delta = \sqrt{\frac{\e}{|x+1|}}}.
+%		\item Let $x \in \R$.  Assume $0 < |x| < \delta$.  Then
+%			$$
+%				|x^3+x^2| = x^2 | x + 1| < \delta^2 |x+1| = \frac{\e}{|x+1|} |x+1| = \e.
+%			$$
+%		\item	 I have proven that \DS{|x^3+x^2| < \e}. 
+%		\hfill \qed
+%	\end{itemize}
+%\end{block}
+%
+%\vfill
+%
+%\end{frame}
+%
+%%-----------------------
+%\begin{frame}[t]
+%\frametitle{Choosing deltas again} 
+%
+%Let us fix numbers $A, \e >0$.  Find:
+%
+%\vfill
+%
+%\begin{enumerate}
+%	\item  a value of $\delta >0$ \; s.t.  \hfill \DS{|x|< \delta \implies |Ax^2|<\e}
+%\p \vfill
+%	\item  \emph{all} values of $\delta >0$ \; s.t.  \hfill \DS{|x|< \delta \implies |Ax^2|<\e}
+%\p \vfill
+%	\item a value of $\delta >0$ \; s.t.   \hfill \DS{|x|< \delta \implies |x+1| < 10}
+%\p \vfill
+%	\item \emph{all} values of $\delta >0$ \; s.t.   \hfill \DS{|x|< \delta \implies |x+1| < 10}
+%\p \vfill
+%	\item a value of $\delta >0$  \; s.t.   \hfill \DS{|x|< \delta \implies \left\{  \begin{array}{c} |Ax^2|<\e \\ |x+1| < 10 \end{array} \right. }
+%\p \vfill
+%	\item a value of $\delta >0$ \; s.t. \hfill \DS{|x| < \delta \implies |(x+1)x^2| < \e }
+%\vfill
+%\end{enumerate}
+%
+%\end{frame}
+%
+%
+%%-----------------------
+%\begin{frame}
+%\frametitle{A theorem about limits}
+%\smallerfont
+%\begin{block}{}
+% Let $f$ be a function with domain $\R$ such that 
+%$$
+%\lim_{x\to 0} f(x) = 3
+%$$
+%Prove that 
+%$$
+%\lim_{x\to 0} \left[  5 f(2x) \right] =15
+%$$
+%directly from the definition of limit.  Do not use any of the limit laws.
+%\end{block}
+%\begin{enumerate}
+%\pause	\item  Write down the formal definition of the statement you want to prove.
+%\pause	\item  Write down what the structure of the formal proof should be, without filling the details.
+%\pause	\item  Rough work.
+%\pause 	\item  Write down a complete proof.
+%\end{enumerate}
+%
+%\end{frame}
+%%-----------------------------
+%\begin{frame}[t]
+%\frametitle{Proof feedback}
+%
+%\begin{enumerate}
+%	\item  Is the structure of the proof correct?  \\
+%	(First fix $\e$, then choose $\delta$, then ...)
+%	\item  Did you say exactly what $\delta$ is?
+%	\item  Is the proof self-contained?  \\
+%	 (I do not need to read the rough work)
+%	\item  Are all variables defined?  In the right order? 
+%	\item  Do all steps follow logically from what comes before? \\
+%	Do you start from what you know and prove what you have to prove? \\
+%	\item  Are you proving your conclusion or assuming it?
+%\end{enumerate}
+%
+%
+%\end{frame}
+%%-----------------------
+%\begin{frame}[t]
+%\frametitle{A new squeeze}
+%\smallerfont
+%\begin{block}{The (new) Squeeze Theorem}
+%	Let $a \in \R$. \\
+%	Let $g$ and $h$ be functions defined near $a$, except possibly at $a$.
+%
+%\vspace{.2cm}
+%	\begin{tabular}{cl}
+%		IF  & $\bullet$ {For $x$ close to $a$ but not $a$,} \;
+%			 \DS{%\exists p >0, \mbox{ s.t. } 0 < |x-a| < p \; \implies \; 
+%			 h(x) \leq g(x) 
+%			 } 
+%			 \\ \vspace{-.2cm} \\
+%		&    $\bullet$ \DS{ \lim_{x \to a} h(x) = \infty } \\ 
+%		\vspace{-.1cm} \\
+%		THEN & $\bullet$ \DS{\lim_{x \to a} g(x) = \infty}
+%	\end{tabular}
+%\end{block}
+%
+%\begin{enumerate}
+%\p
+%	\item  Replace the first hypothesis with a more precise mathematical statement.
+%\p
+%	\item  Write down the definition of what you want to prove.
+%\p
+%	\item  Write down the structure of the formal proof.
+%\p
+%	\item  Rough work
+%\p
+%	\item  Write down a complete, formal proof.
+%\end{enumerate}
+%\end{frame}
+%
+%
+%
+%
+%
+%%-----------------------------
+%
+%\begin{frame}
+%\frametitle{Absolute value and the Squeeze Theorem}
+%
+%Use the Squeeze Theorem to prove:
+%\begin{theorem}
+%IF \DS{\lim_{x\to a}|f(x)| = 0}, THEN \DS{\lim_{x\to a}f(x)=0}.\\
+%\end{theorem}
+%
+%\
+%
+%\emph{Hint:} Recall that $-|c| \leq c \leq |c|$ for every $c \in \R$.
+%
+%\end{frame}
+%
+%
+%
+%%------------------------------
+%\begin{frame}
+%\frametitle{Trig computations}
+%
+%Using that \DS{\lim_{x \to 0} \frac{\sin x}{x} = 1}, compute the following limits:
+%
+%\
+%
+%\begin{enumerate}
+%\begin{multicols}{2}
+%	\item \DS{\lim_{x \to 2} \frac{\sin x}{x} }
+%	\item \DS{\lim_{x \to 0} \frac{\sin (5x)}{x} }
+%	\item \DS{\lim_{x \to 0} \frac{\tan^2 (2x^2)}{ x^4} }
+%	\item \DS{\lim_{x \to 0} \frac{\sin e^x}{e^x} }
+%	\item \DS{\lim_{x \to 0} \frac{1 - \cos x}{x} }
+%	\item \DS{\lim_{x \to 0}  \frac{\tan^{10}(2x^{20})}{\sin^{200}(3x)} }
+%\end{multicols}
+%\p
+%	\item  \ \vspace{-.6cm}
+%	
+%	{\smallerfont \DS{\lim_{x \to 0} \left[  (\sin x) \; (\cos (2x)) \; (\tan (3x)) \; (\sec (4x) ) \; (\csc (5x)) \; (\cot (6x)) \right]} }
+%\end{enumerate}
+%
+%\end{frame}
+%%------------------------------
+%\begin{frame}
+%\frametitle{Plus or minus infinity?}
+%
+%Compute:
+%\begin{enumerate}
+%\begin{multicols}{2}
+%	\item  \DS{\lim_{x \to -3^+} \;  \frac{x^2-9}{3-2x-x^2}}
+%
+%	\item  \DS{\lim_{x \to 1^+} \; \frac{x^2-9}{3-2x-x^2}}
+%\end{multicols}
+%\end{enumerate}
+%
+%\end{frame}
+%%-----------------------------
+%\begin{frame}
+%\frametitle{A harder limit}
+%
+%Calculate
+%
+%	$$
+%		\lim_{x \to 2} \frac{\left[\sqrt{2+x} -2\right] \left[ \sqrt{3+x} - 3 \right]}{\sqrt{x-1} - 1}
+%	$$
+%
+%\end{frame}
+%%-----------------------------
+%\begin{frame}
+%\frametitle{Can we conclude this?}
+%
+%\begin{itemize}
+%	\item Consider the function \DS{(x)=\frac{4}{x}}.
+%\vfill
+%	\item We have \quad $f(-1)=-4<0$  \quad and \quad $f(1)=4>0$. 
+%\vfill
+%	\item Use IVT.
+%	
+%	 Can we conclude $f(c)=0$ for some $c\in(-1,1)$?
+%\end{itemize}
+%\vfill \vfill
+%
+%\end{frame}
+%
+%
+%%-----------------------------
+%\begin{frame}
+%\frametitle{Temperature}
+%	
+%	On June 09, 2016, the outside temperature in Toronto at 6 AM was $10^\circ$. At 4 PM,
+%the temperature was $20^\circ$. 
+%
+%\begin{enumerate}
+%
+%
+%\item Must there have been a time between 6 AM and 4 PM when the temperature was $15^\circ$?
+%Explain how you know. Which assumption about temperature allows you to reach your conclusion?
+%
+%
+%\item Must there have been a time between 6 AM and 4 PM when the temperature was $22^\circ$?
+%Explain how you know.
+%
+%
+%\item Could there have been a time between 6 AM and 4 PM when the temperature was $22^\circ$?
+%Explain how you know.
+%
+%\end{enumerate}
+%\end{frame}
+%
+%%-----------------------------
+%\begin{frame}
+%\frametitle{More on the definition of maximum}
+%
+%
+%Let $f$ be a function with domain $I$.  \\
+%What does each of the following mean?
+%
+%\begin{enumerate}
+%	\item  \DS{\exists C \in \R} s.t. \DS{\forall x \in I}, \DS{f(x) \leq C}
+%	\item  \DS{\exists C \in \R} s.t. \DS{\forall x \in I}, \DS{f(x) < C}
+%	\item  \DS{\exists a \in I} s.t. \DS{\forall x \in I}, \DS{f(x) \leq f(a)}
+%	\item  \DS{\exists a \in I} s.t. \DS{\forall x \in I}, \DS{f(x) < f(a)}
+%\end{enumerate}
+%
+%\end{frame}
+%
+%
+%%-----------------------------
+%%-----------------------------
 \end{document}
-%-----------------------------
-%-----------------------------
-%-----------------------------
-
-
-
-
-
-
-
-
-
+%%-----------------------------
+%%-----------------------------
+%%-----------------------------
+%
+%
+%
+%
+%
+%
+%
+%
+%
