--- a/unit-2/137-CA-02.tex
+++ b/unit-2/137-CA-02.tex
@@ -887,7 +887,22 @@ Let $a \in \R$.  Let $f$ and $g$ be functions with domain $\R$, except possibly 
 	\end{itemize}
 THEN  \DS{\lim_{x \to a} \left[ f(x) g(x) \right] = 0}
 \end{block}
+\end{frame}
 
+\begin{frame}[t]
+\frametitle{Proof feedback}
+
+\begin{enumerate}
+	\item  Is the structure of the proof correct?  \\
+	(First fix $\e$, then choose $\delta$, then ...)
+	\item  Did you say exactly what $\delta$ is?
+	\item  Is the proof self-contained?  \\
+	 (I do not need to read the rough work)
+	\item  Are all variables defined?  In the right order? 
+	\item  Do all steps follow logically from what comes before? \\
+	Do you start from what you know and prove what you have to prove? \\
+	\item  Are you proving your conclusion or assuming it?
+\end{enumerate}
 
 \end{frame}
 %-----------------------------
