--- a/unit-2/137-CA-02.tex
+++ b/unit-2/137-CA-02.tex
@@ -983,6 +983,19 @@ THEN  \DS{\lim_{x \to a} \left[ f(x) g(x) \right] = 0}
 
 \begin{frame}
 \frametitle{MAT137 Lecture 13 --- Continuity}
+	{\bf Warmup:}
+	
+	Let $f(x)=x^2\cos(2\pi/x)$
+	Rephrase the following using precise mathematical language and then prove the statement true or false.
+
+	\bigskip
+	\begin{quote}
+		Nomatter how close $x$ is to $0$ on the positive side of $0$, there are $x$'s which
+		make $f(x)$ positive and $x$'s which make $f(x)$ negative.
+	\end{quote}
+
+	\vfill
+
 	{\bf Before next class:}
 		\begin{itemize} \normalsize
 			\item {\bf Watch videos 2.16, 2.17, 2.18 }
