--- a/unit-2/137-CA-02.tex
+++ b/unit-2/137-CA-02.tex
@@ -1139,12 +1139,38 @@ Write down the formal definition of the following statements:
 
 \begin{frame}
 \frametitle{MAT137 Lecture 14 --- Continuity 2}
+	{\bf Warmup:}
+
+	Review your proof that
+	\[
+		f(x,y) = \frac{x+y+|x-y|}{2} = \max\{x,y\}
+	\]
+	
+	Does your proof follow a logical structure? Are vairables quantified \emph{before} they're
+	used? Do you arrive at the correct conclusion?
+
+
+	\vfill
 	{\bf Before next class:}
 		\begin{itemize} \normalsize
 			\item {\bf Watch videos 2.19, 2.20 }
 		\end{itemize}
 	\vfill
 
+\end{frame}
+
+\begin{frame}[t]
+\frametitle{Proof feedback}
+
+\begin{enumerate}
+	\item  Is the goal of the proof (the WTS) clear?
+	\item  Are all variables defined?  In the right order? 
+	\item  Is the proof self-contained?  \\
+	 (I do not need to read the rough work)
+	\item  Do all steps follow logically from what comes before? \\
+	Do you start from what you know and prove what you have to prove? \\
+	\item  Are you proving your conclusion or assuming it?
+\end{enumerate}
 \end{frame}
 
 
