--- a/unit-2/137-CA-02.tex
+++ b/unit-2/137-CA-02.tex
@@ -1249,19 +1249,19 @@ Construct a pair of functions $f$ and $g$ such that
 		
 			\vfill
 		\item 
-			$\phantom{\forall a\in \mathbb R,\ }\forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \rojo{\forall x\in\mathbb R},$\\
+			$\phantom{\forall a\in \mathbb R,\ }\forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ {\color{red}\forall x\in\mathbb R},$\\
 			$|x-a|<\delta\implies |f(x)-f(a)|<\varepsilon$
 			\vfill
 		\item 
-			$\rojo{\forall a\in \mathbb R},\ \forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \rojo{\forall x\in\mathbb R},$\\
+			${\color{red}\forall a\in \mathbb R},\ \forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ {\color{red}\forall x\in\mathbb R},$\\
 			$|x-a|<\delta\implies |f(x)-f(a)|<\varepsilon$
 			\vfill
 		\item 
-			$\rojo{\forall x\in \mathbb R},\ \forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \rojo{\forall a\in\mathbb R},$\\
+			${\color{red}\forall x\in \mathbb R},\ \forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ {\color{red}\forall a\in\mathbb R},$\\
 			$|x-a|<\delta\implies |f(x)-f(a)|<\varepsilon$
 			\vfill
 		\item 
-			$\forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ \rojo{\forall a\in \mathbb R},\ \rojo{\forall x\in\mathbb R},$\\
+			$\forall \varepsilon>0,\ \exists\delta >0,\ \text{s.t.}\ {\color{red}\forall a\in \mathbb R},\ {\color{red}\forall x\in\mathbb R},$\\
 			$|x-a|<\delta\implies |f(x)-f(a)|<\varepsilon$
 			\vfill
 	\end{enumerate}
