--- a/unit-2/137-CA-02.tex
+++ b/unit-2/137-CA-02.tex
@@ -1178,6 +1178,8 @@ Write down the formal definition of the following statements:
 \begin{frame}
 \frametitle{True or False? -- Discontinuities}
 
+	Let $a\in\mathbb R$ be fixed.
+
 	\begin{enumerate}
 		\item IF $f$ and $g$ have removable discontinuities at $a$
 		
@@ -1350,11 +1352,18 @@ Compute \DS{L = \lim_{x \to -\infty} \left[  x - \sqrt{x^2+x} \right]}.
 
 \begin{frame}
 \frametitle{MAT137 Lecture 16 --- IVT and EVT}
+	{\bf Warmup:}
+
+	Where was the flaw in computing 
+	\DS{L = \lim_{x \to -\infty} \left[  x - \sqrt{x^2+x} \right]}
+	from last time?
+
+
+	\vfill
 	{\bf Before next class:}
 		\begin{itemize} \normalsize
 			\item {\bf Watch videos 3.1, 3.2, 3.3 }
 		\end{itemize}
-	\vfill
 
 \end{frame}
 
@@ -1397,10 +1406,13 @@ has at least two solutions.
 \begin{frame}
 \frametitle{Definition of maximum}
 
-Let $f$ be a function with domain $I$.  \\
-Which one (or ones) of the following is (or are) a definition of 	\quad
+Let $f$ be a function with domain $I$.  
+	Which statement(s) give a definition of
+
+	\bigskip
 	``$f$ has a maximum on $I$"?
 
+	\bigskip
 \begin{enumerate}
 	\item   \DS{\forall x \in I}, \DS{\exists C \in \R} s.t. \DS{f(x) \leq C}
 	\item  \DS{\exists C \in I} s.t. \DS{\forall x \in I}, \DS{f(x) \leq C}
