--- a/unit-3/137-CA-03.tex
+++ b/unit-3/137-CA-03.tex
@@ -175,6 +175,13 @@ Calculate \DS{g'(4)} directly from the definition of derivative as a limit.
 \begin{frame}
 	\frametitle{MAT137 Lecture 18 --- Differentiation Rules}
 
+	{\bf Warmup:}
+
+	Sketch $y=f'(x)$.
+
+\begin{center}
+\includegraphics[scale=.3]{G4}
+\end{center}
 	\vfill
 	{\bf Before next class:}
 		\begin{itemize} \normalsize
