--- a/unit-3/137-CA-03.tex
+++ b/unit-3/137-CA-03.tex
@@ -361,60 +361,6 @@ Let $f$ be a continuous function with domain $\R$.
 \vfill
 
 \end{frame}
-
-
-\begin{frame}[t]
-\smallerfont
-\frametitle{True or False - Differentiability vs Continuity}
-
-Let $f$ be a function with domain $\R$.  Let $c \in \R$. \\
-Which of these implications are true?
-
-\vfill
-
-\begin{enumerate}
-	\item IF $f$ is \rojo{continuous} at $c$, THEN $f$ is \azul{differentiable} at $c$
-\vfill
-	\item IF $f$ is \azul{differentiable} at $c$, THEN $f$ is \rojo{continuous} at $c$
-\vfill
-	\item IF $f$ is \azul{differentiable} at $c$, THEN $f'$ is \rojo{continuous} at $c$
-\vfill
-	\item IF $f'$ is \rojo{continuous} at $c$, THEN $f$ is \rojo{continuous} at $c$
-\vfill
-	\item IF $f$ is \azul{differentiable} at $c$, THEN $f$ is \rojo{continuous} at and near $c$.
-\vfill
-	\item IF $f$ is \rojo{continuous} at and near $c$, THEN $f$ is \azul{differentiable} at $c$.
-\vfill
-\end{enumerate}
- 
-\end{frame}
-%-----------------------------
-\begin{frame}[t]
-\smallerfont
-\frametitle{True or False - Differentiability and Operations}
-
-Let $f$ be a function with domain $\R$.  Let $c \in \R$. \\
-Let \DS{g(x) = f(x)^2}.
-Which of these implications are true?
-
-\vfill
-
-\begin{enumerate}
-	\item IF $f$ is \azul{differentiable} at $c$, THEN $f+f'$ is \rojo{continuous} at $c$
-\vfill
-	\item IF $f$ is \azul{differentiable} at $c$, THEN $3f$ is \azul{differentiable} at $c$.
-\vfill
-	\item IF $f$ is \azul{differentiable} at $c$, THEN $g$ is \azul{differentiable} at $c$.
-\vfill
-	\item IF $g$ is \azul{differentiable} at $c$, THEN $f$ is \azul{differentiable} at $c$.
-\vfill
-	\item IF $f$ is \azul{differentiable} at $c$, THEN $1/f$ is \azul{differentiable} at $c$.
-\vfill
-\end{enumerate}
- 
-\end{frame}
-
-
 \begin{frame}[t]
 \frametitle{Absolute value and tangent lines}
 
@@ -499,7 +445,7 @@ Write a proof directly from the definition of derivative.
 
 \
 
-If you answered ``no" to Q\ref{qu:cont}, you probably missed something important.
+	If you answered ``no" to (F), you probably missed something important.
 
 \end{frame}
 %-----------------------------
@@ -520,6 +466,60 @@ If you answered ``no" to Q\ref{qu:cont}, you probably missed something important
 			\left[ f'(a) g(a) - f(a) g'(a) \right] \frac{1}{g(a) g(a)}
 	\end{align*}
 \end{frame}
+
+
+
+\begin{frame}[t]
+\smallerfont
+\frametitle{True or False - Differentiability vs Continuity}
+
+Let $f$ be a function with domain $\R$.  Let $c \in \R$. \\
+Which of these implications are true?
+
+\vfill
+
+\begin{enumerate}
+	\item IF $f$ is \rojo{continuous} at $c$, THEN $f$ is \azul{differentiable} at $c$
+\vfill
+	\item IF $f$ is \azul{differentiable} at $c$, THEN $f$ is \rojo{continuous} at $c$
+\vfill
+	\item IF $f$ is \azul{differentiable} at $c$, THEN $f'$ is \rojo{continuous} at $c$
+\vfill
+	\item IF $f'$ is \rojo{continuous} at $c$, THEN $f$ is \rojo{continuous} at $c$
+\vfill
+	\item IF $f$ is \azul{differentiable} at $c$, THEN $f$ is \rojo{continuous} at and near $c$.
+\vfill
+	\item IF $f$ is \rojo{continuous} at and near $c$, THEN $f$ is \azul{differentiable} at $c$.
+\vfill
+\end{enumerate}
+ 
+\end{frame}
+%-----------------------------
+\begin{frame}[t]
+\smallerfont
+\frametitle{True or False - Differentiability and Operations}
+
+Let $f$ be a function with domain $\R$.  Let $c \in \R$. \\
+Let \DS{g(x) = f(x)^2}.
+Which of these implications are true?
+
+\vfill
+
+\begin{enumerate}
+	\item IF $f$ is \azul{differentiable} at $c$, THEN $f+f'$ is \rojo{continuous} at $c$
+\vfill
+	\item IF $f$ is \azul{differentiable} at $c$, THEN $3f$ is \azul{differentiable} at $c$.
+\vfill
+	\item IF $f$ is \azul{differentiable} at $c$, THEN $g$ is \azul{differentiable} at $c$.
+\vfill
+	\item IF $g$ is \azul{differentiable} at $c$, THEN $f$ is \azul{differentiable} at $c$.
+\vfill
+	\item IF $f$ is \azul{differentiable} at $c$, THEN $1/f$ is \azul{differentiable} at $c$.
+\vfill
+\end{enumerate}
+ 
+\end{frame}
+
 
 
 
